
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Greetings"
version = "0.1.1"
dependencies = [
    "art", # dependencies
]

[project.scripts]
greet = "greetings.command:process"

[tool.hatch.build.targets.wheel]
packages = [
  "src/greetings", # 这是导入包时候的名字 from greetings import *
]
